force-app/main/default/objects/Project__c/fields/Difficulty_Level__c.field-meta.xml
<CustomField>
    <fullName>Difficulty_Level__c</fullName>
    <label>Difficulty Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
                <default>true</default>
                <label>Beginner</label>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>