force-app/main/default/objects/Project__c/fields/GitHub_Repo_URL__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Repo_URL__c</fullName>
    <label>GitHub Repo URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>