force-app/main/default/objects/Project__c/fields/Is_Self_Reference__c.field-meta.xml
<CustomField>
    <fullName>Is_Self_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, indicates this project record represents the portfolio site itself. Used for special UI treatment.</description>
    <label>Is Self Reference</label>
    <type>Checkbox</type>
</CustomField>