force-app/main/default/objects/Project__c/fields/Thumbnail_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Image_URL__c</fullName>
    <label>Thumbnail Image URL</label>
    <type>Url</type>
</CustomField>